[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
wasm-bindgen = "0.2.84"
int_rs = { path = "../" }
wasm-bindgen-futures = "0.4.34"

[lib]
crate-type = ["cdylib", "lib"]
